Fix to 'specialist guidance' tab alignment

--- a/app/assets/stylesheets/frontend/layouts/specialist.scss
+++ b/app/assets/stylesheets/frontend/layouts/specialist.scss
@@ -7,11 +7,10 @@ body.specialist {
   }
   #whitehall-wrapper #global-nav .inner {
     background: transparent;
-    
-    @media (max-width: 768px) {
-      ul {
-        margin-left: $gutter;
-      }
+    max-width: $max-site-width + $gutter*2;
+
+    ul {
+      margin-left: $gutter;
     }
 
     #inside_gov_link a {
