--- a/app/assets/stylesheets/frontend/reset/_govuk-overrides.scss
+++ b/app/assets/stylesheets/frontend/reset/_govuk-overrides.scss
@@ -22,7 +22,7 @@ html {
 }
 
 #footer .beta-notice {
-  padding: $gutter-half 0;
+  padding: $gutter-half $gutter;
 }
 
 #footer .beta-notice p {
